--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sample</title>
+    <title>CircleCI config generator?</title>
     <meta charset="UTF-8" />
   </head>
 
