--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Sample</title><meta charset="UTF-8"></head><body> <div id="app"></div> <script src="src.0910d8de.js"></script> </body></html>
+<!DOCTYPE html><html><head><title>CircleCI config generator?</title><meta charset="UTF-8"></head><body> <div id="app"></div> <script src="src.0910d8de.js"></script> </body></html>
